// *******************************************************************************
// * IBM Confidential
// * OCO Source Materials
// * IBM Cloud Container Service, 5737-D43
// * (C) Copyright IBM Corp. 2020 All Rights Reserved.
// * The source code for this program is not  published or otherwise divested of
// * its trade secrets, irrespective of what has been deposited with
// * the U.S. Copyright Office.
// ******************************************************************************/

syntax = "proto3";

option go_package = "github.com/IBM/ibmcloud-object-storage-plugin/ibm-provider/provider";
option java_multiple_files = true;
option java_package = "io.grpc-client.ibm.provider";
option java_outer_classname = "IBMProvider";

package provider;

// The provider service definition.
service IBMProvider {
rpc GetProviderType (ProviderTypeRequest) returns (ProviderTypeReply) {}
rpc GetVPCSvcEndpoint (VPCSvcEndpointRequest) returns (VPCSvcEndpointReply) {}
}

// The provider type request
message ProviderTypeRequest {
string id = 1;
}

// The provider type reply
message ProviderTypeReply {
string type = 1;
}

// The VPC cloud service endpoint request
message VPCSvcEndpointRequest {
string id = 1;
}

// The VPC cloud service endpoint reply
message VPCSvcEndpointReply {
string cse = 1;
}
